Save changes commit

--- a/Class_Materials/Prework-Review/(Optional) Lab_rock-paper-scissors.ipynb
+++ b/Class_Materials/Prework-Review/(Optional) Lab_rock-paper-scissors.ipynb
@@ -33,10 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gestures = [\"rock\", \"paper\", \"scissors\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,10 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_rounds = 10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,10 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "rounds_to_win = math.ceil(((n_rounds + 1)/2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,10 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cpu_score = 0\n",
+    "player_score = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "def choice_cpu():\n",
+    "    choice_cpu = random.choice(gestures)\n",
+    "    return choice_cpu\n",
+    "#choice_cpu()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,10 +139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def choice_user():\n",
+    "\n",
+    "    choice_user = input(\"What option of rock, paper, scissors do you want to choose? \").lower()\n",
+    "    \n",
+    "    while choice_user not in gestures:\n",
+    "        print(\"Sorry, please choose on of the three options: Rock, Paper, Scissors\")\n",
+    "        choice_user = input(\"What option of rock, paper, scissors do you want to choose?\").lower()\n",
+    "    else:\n",
+    "        return choice_user"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,25 +164,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def define_rounds_winner(choice_cpu, choice_user):\n",
+    "    \n",
+    "    #Tie\n",
+    "    if choice_cpu == choice_user:\n",
+    "        result = 0\n",
+    "    \n",
+    "    #CPU Wins\n",
+    "    elif choice_cpu == \"paper\" and choice_user == \"rock\":\n",
+    "        result = 1\n",
+    "    elif choice_cpu == \"rock\" and choice_user == \"scissors\":\n",
+    "        result = 1\n",
+    "    elif choice_cpu == \"scissors\" and choice_user == \"paper\":\n",
+    "        result = 1\n",
+    "    \n",
+    "    #User wins\n",
+    "    elif choice_cpu == \"rock\" and choice_user == \"paper\":\n",
+    "        result = 2\n",
+    "    elif choice_cpu == \"paper\" and choice_user == \"scissors\":\n",
+    "        result = 2\n",
+    "    elif choice_cpu == \"scissors\" and choice_user == \"rock\":\n",
+    "        result = 2\n",
+    "    \n",
+    "    return result"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 9. Define a function that prints the choice of the computer, the choice of the player and a message that announces who won the current round. \n",
+    "### 9. Define a function that prints the choice of the computer, the choice of the player and a message that announces who won the current round. \n",
     "You should also use this function to update the variables that count the number of rounds that the computer and the player have won. The score of the winner increases by one point. If there is a tie, the score does not increase."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 0, 'User won the round. You choose paper, the computer chose rock')"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def choices_summary(choice_cpu, choice_user, result, cpu_score=0, player_score=0):\n",
+    "    if result == 0:\n",
+    "        round_winner = \"Nobody\"\n",
+    "        \n",
+    "    \n",
+    "    elif result == 1:\n",
+    "        cpu_score+=1\n",
+    "        round_winner = \"CPU\"\n",
+    "        #return cpu_score, (f\"{round_winner} won the round. You choose {choice_user}, the computer chose {choice_cpu}\")\n",
+    "    \n",
+    "    elif result == 2:\n",
+    "        player_score+=1\n",
+    "        round_winner = \"User\"\n",
+    "        #return player_score, (f\"{round_winner} won the round. You choose {choice_user}, the computer chose {choice_cpu}\")\n",
+    "    \n",
+    "    return player_score, cpu_score, (f\"{round_winner} won the round. You choose {choice_user}, the computer chose {choice_cpu}\")\n",
+    "choices_summary(\"rock\", \"paper\", 2, 0, 0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,10 +250,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What option of rock, paper, scissors do you want to choose? asgf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?asf\n",
+      "Sorry, please choose on of the three options: Rock, Paper, Scissors\n",
+      "What option of rock, paper, scissors do you want to choose?paper\n",
+      "User won the round. You choose paper, the computer chose rock\n",
+      "current statistics: user: 1, computer: 0, round#: 1\n",
+      "What option of rock, paper, scissors do you want to choose? paper\n",
+      "Nobody won the round. You choose paper, the computer chose paper\n",
+      "current statistics: user: 1, computer: 0, round#: 2\n",
+      "What option of rock, paper, scissors do you want to choose? paper\n",
+      "User won the round. You choose paper, the computer chose rock\n",
+      "current statistics: user: 2, computer: 0, round#: 3\n",
+      "What option of rock, paper, scissors do you want to choose? paper\n",
+      "Nobody won the round. You choose paper, the computer chose paper\n",
+      "current statistics: user: 2, computer: 0, round#: 4\n",
+      "What option of rock, paper, scissors do you want to choose? paper\n",
+      "Nobody won the round. You choose paper, the computer chose paper\n",
+      "current statistics: user: 2, computer: 0, round#: 5\n",
+      "The game has ended\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Assumptions\n",
+    "current_round = 0\n",
+    "gestures = [\"rock\", \"paper\", \"scissors\"]\n",
+    "n_rounds = 5\n",
+    "rounds_to_win = math.ceil(((n_rounds + 1)/2))\n",
+    "player_score_=0\n",
+    "cpu_score_=0\n",
+    "\n",
+    "while current_round < n_rounds and (cpu_score_1 or player_score_1) < rounds_to_win:\n",
+    "    #Sonderfall: Wenn der User etwas falsch eingegeben hat, zähle den Zähler nicht hoch!! (done)\n",
+    "    current_round+=1\n",
+    "    a = choice_cpu()\n",
+    "    b = choice_user()\n",
+    "    c = define_rounds_winner(a,b)\n",
+    "    player_score_+=choices_summary(a, b, c, cpu_score, player_score)[0]\n",
+    "    cpu_score_+=choices_summary(a, b, c, cpu_score, player_score)[1]\n",
+    "    print(choices_summary(a, b, c, cpu_score, player_score)[2])\n",
+    "    print(f\"current statistics: user: {player_score_}, computer: {cpu_score_}, round#: {current_round}\")\n",
+    "print(\"The game has ended\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,10 +340,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The overall game result: You won with computer (0) vs. you (2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "if player_score_ == cpu_score_:\n",
+    "    print(f\"The overall game result: Tie with computer ({cpu_score_}) vs. you ({player_score_})\")\n",
+    "elif player_score_ > cpu_score_:\n",
+    "    print(f\"The overall game result: You won with computer ({cpu_score_}) vs. you ({player_score_})\")\n",
+    "else:\n",
+    "    print(f\"The overall game result: Computer won with computer ({cpu_score_}) vs. you ({player_score_})\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
