--- a/Class_Materials/Python_Basics/Labs/Python_Strings/LAB_Python_Strings.ipynb
+++ b/Class_Materials/Python_Basics/Labs/Python_Strings/LAB_Python_Strings.ipynb
@@ -18,23 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I am strengthening my programming skills in order to become a great Data Analyst'"
+       "'I am strengthening my programming skills in order to become a great Data Analyst.'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "str_list = ['I', 'am', 'strengthening', 'my', 'programming', 'skills', 'in', 'order', 'to', 'become', 'a', 'great', 'Data','Analyst']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\" \".join(str_list) + \".\""
    ]
   },
   {
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -55,14 +56,53 @@
        "['bananas', 'bread', 'brownie mix', 'broccoli']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "grocery_list = []\n",
+    "for i in food_list:\n",
+    "    if (i.lower().find('b') == 0):\n",
+    "        grocery_list.append(i.lower())\n",
+    "\n",
+    "grocery_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grocerie List: bananas, bread, brownie mix, broccoli.'"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
+    "grocery_list = \"Grocerie List:\"\n",
+    "for index, i in enumerate(food_list):\n",
+    "        if i.lower().find(\"b\") == 0:\n",
+    "            if index == 0:\n",
+    "                grocery_list = grocery_list + \" \" + i.lower()\n",
+    "                \n",
+    "            elif index == len(food_list)-1:\n",
+    "                grocery_list = grocery_list + \", \" + i.lower() + \".\"\n",
+    "                \n",
+    "            else:\n",
+    "                grocery_list = grocery_list + \", \" +  i.lower()\n",
+    "\n",
+    "grocery_list"
    ]
   },
   {
@@ -76,16 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The area of the circle with radius:4.5 is 63.61725123519331'"
+       "'The area of the circle with radius: 4.5 is: 63.61725123519331'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +138,10 @@
     "radius = 4.5\n",
     "pi = math.pi\n",
     "area= pi*radius**2\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "total_sentence = string1 + \" \" + str(radius) + \" \" + string2 + \" \" + str(area)\n",
+    "total_sentence"
    ]
   },
   {
@@ -114,9 +157,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'some': 2,\n",
+       " 'say': 3,\n",
+       " 'the': 1,\n",
+       " 'world': 1,\n",
+       " 'will': 1,\n",
+       " 'end': 1,\n",
+       " 'in': 2,\n",
+       " 'fire,': 1,\n",
+       " 'ice': 2,\n",
+       " 'from': 1,\n",
+       " 'what': 1,\n",
+       " 'i’ve': 1,\n",
+       " 'tasted': 1,\n",
+       " 'of': 2,\n",
+       " 'desire': 1,\n",
+       " 'i': 3,\n",
+       " 'hold': 1,\n",
+       " 'with': 1,\n",
+       " 'those': 1,\n",
+       " 'who': 1,\n",
+       " 'favor': 1,\n",
+       " 'fire': 1,\n",
+       " 'but': 1,\n",
+       " 'if': 1,\n",
+       " 'it': 1,\n",
+       " 'had': 1,\n",
+       " 'to': 1,\n",
+       " 'perish': 1,\n",
+       " 'twice,': 1,\n",
+       " 'think': 1,\n",
+       " 'know': 1,\n",
+       " 'enough': 1,\n",
+       " 'hate': 1,\n",
+       " 'that': 1,\n",
+       " 'for': 1,\n",
+       " 'destruction': 1,\n",
+       " 'is': 1,\n",
+       " 'also': 1,\n",
+       " 'great': 1,\n",
+       " 'and': 1,\n",
+       " 'would': 1,\n",
+       " 'suffice': 1}"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -128,7 +223,24 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "listo = poem.split()\n",
+    "\n",
+    "\n",
+    "#data cleaning\n",
+    "listo_new = []\n",
+    "for word in listo:\n",
+    "    if (word.lower().find('.') != -1):\n",
+    "        listo_new.append(word.replace(\".\", \"\"))\n",
+    "        \n",
+    "    else:\n",
+    "        listo_new.append(word)\n",
+    "\n",
+    "#data processing\n",
+    "dictio = {}\n",
+    "for word in listo_new:\n",
+    "    dictio[word.lower()] = listo_new.count(word)\n",
+    "dictio"
    ]
   },
   {
@@ -140,9 +252,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I',\n",
+       " 'was',\n",
+       " 'angry',\n",
+       " 'with',\n",
+       " 'my',\n",
+       " 'friend',\n",
+       " 'I',\n",
+       " 'told',\n",
+       " 'my',\n",
+       " 'wrath',\n",
+       " 'my',\n",
+       " 'wrath',\n",
+       " 'did',\n",
+       " 'end',\n",
+       " 'I',\n",
+       " 'was',\n",
+       " 'angry',\n",
+       " 'with',\n",
+       " 'my',\n",
+       " 'foe',\n",
+       " 'I',\n",
+       " 'told',\n",
+       " 'it',\n",
+       " 'not',\n",
+       " 'my',\n",
+       " 'wrath',\n",
+       " 'did',\n",
+       " 'grow',\n",
+       " 'And',\n",
+       " 'I',\n",
+       " 'waterd',\n",
+       " 'it',\n",
+       " 'in',\n",
+       " 'fears',\n",
+       " 'Night',\n",
+       " '',\n",
+       " 'morning',\n",
+       " 'with',\n",
+       " 'my',\n",
+       " 'tears',\n",
+       " 'And',\n",
+       " 'I',\n",
+       " 'sunned',\n",
+       " 'it',\n",
+       " 'with',\n",
+       " 'smiles',\n",
+       " 'And',\n",
+       " 'with',\n",
+       " 'soft',\n",
+       " 'deceitful',\n",
+       " 'wiles',\n",
+       " 'And',\n",
+       " 'it',\n",
+       " 'grew',\n",
+       " 'both',\n",
+       " 'day',\n",
+       " 'and',\n",
+       " 'night',\n",
+       " 'Till',\n",
+       " 'it',\n",
+       " 'bore',\n",
+       " 'an',\n",
+       " 'apple',\n",
+       " 'bright',\n",
+       " 'And',\n",
+       " 'my',\n",
+       " 'foe',\n",
+       " 'beheld',\n",
+       " 'it',\n",
+       " 'shine',\n",
+       " 'And',\n",
+       " 'he',\n",
+       " 'knew',\n",
+       " 'that',\n",
+       " 'it',\n",
+       " 'was',\n",
+       " 'mine',\n",
+       " 'And',\n",
+       " 'into',\n",
+       " 'my',\n",
+       " 'garden',\n",
+       " 'stole',\n",
+       " 'When',\n",
+       " 'the',\n",
+       " 'night',\n",
+       " 'had',\n",
+       " 'veild',\n",
+       " 'the',\n",
+       " 'pole',\n",
+       " 'In',\n",
+       " 'the',\n",
+       " 'morning',\n",
+       " 'glad',\n",
+       " 'I',\n",
+       " 'see',\n",
+       " 'My',\n",
+       " 'foe',\n",
+       " 'outstretched',\n",
+       " 'beneath',\n",
+       " 'the',\n",
+       " 'tree']"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -166,7 +389,109 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:"
+    "list1 = []\n",
+    "\n",
+    "# Your code here:\n",
+    "\n",
+    "\n",
+    "\n",
+    "poemsplitted = poem.split()\n",
+    "\n",
+    "for index, word in enumerate(poemsplitted):\n",
+    "    for char in word:\n",
+    "        if char.isalnum() == False:\n",
+    "            poemsplitted[index] = word.replace(char,\"\")\n",
+    "\n",
+    "poemsplitted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listo = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " 'deceitful',\n",
+       " 'foe',\n",
+       " 'fears',\n",
+       " 'shine',\n",
+       " 'an',\n",
+       " 'beneath',\n",
+       " 'glad',\n",
+       " 'my',\n",
+       " 'into',\n",
+       " 'day',\n",
+       " 'wrath',\n",
+       " 'that',\n",
+       " 'end',\n",
+       " 'sunned',\n",
+       " 'had',\n",
+       " 'morning',\n",
+       " 'did',\n",
+       " 'grow',\n",
+       " 'mine',\n",
+       " 'apple',\n",
+       " 'veild',\n",
+       " 'grew',\n",
+       " 'see',\n",
+       " 'in',\n",
+       " 'wiles',\n",
+       " 'bore',\n",
+       " 'soft',\n",
+       " 'smiles',\n",
+       " 'outstretched',\n",
+       " 'angry',\n",
+       " 'i',\n",
+       " 'knew',\n",
+       " 'told',\n",
+       " 'and',\n",
+       " 'bright',\n",
+       " 'waterd',\n",
+       " 'the',\n",
+       " 'when',\n",
+       " 'till',\n",
+       " 'not',\n",
+       " 'he',\n",
+       " 'night',\n",
+       " 'with',\n",
+       " 'it',\n",
+       " 'beheld',\n",
+       " 'tree',\n",
+       " 'both',\n",
+       " 'stole',\n",
+       " 'pole',\n",
+       " 'was',\n",
+       " 'garden',\n",
+       " 'tears',\n",
+       " 'friend']"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for entry in poemsplitted:\n",
+    "    for item in blacklist:\n",
+    "        #print(entry)\n",
+    "        if entry.lower() != item.lower():\n",
+    "            listo.append(entry.lower())\n",
+    "            break\n",
+    "listo_unique = list(set(listo))\n",
+    "listo_unique"
    ]
   }
  ],
@@ -187,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "mimetype": "text/x-python",
   "name": "python",
