--- a/Class_Materials/Numpy/Numpy.ipynb
+++ b/Class_Materials/Numpy/Numpy.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "array([5, 3, 2])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -148,7 +148,7 @@
        "       [0.06958208, 0.8853372 , 0.9526444 ]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -183,12 +183,23 @@
       " [4 5 6]\n",
       " [7 8 9]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "lst_lst = [[1,2,3],[4,5,6],[7,8,9]]\n",
     "d = np.array(lst_lst)\n",
-    "print(d)"
+    "print(d)\n",
+    "d.shape"
    ]
   },
   {
@@ -283,18 +294,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.13842199,  0.70569237,  1.27179528],\n",
-       "       [-0.98674733, -0.33483545, -0.0994817 ],\n",
-       "       [ 0.4071921 ,  0.91938754,  0.31211801]])"
+       "array([[-1.43713939,  0.17793711,  1.39442275],\n",
+       "       [ 0.29132019, -0.08200619,  0.64424261],\n",
+       "       [ 0.32807995,  0.85743275, -0.93696928]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,18 +318,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 2],\n",
-       "       [1, 7, 1],\n",
-       "       [5, 6, 5]])"
+       "array([[8, 0, 5],\n",
+       "       [3, 0, 4],\n",
+       "       [3, 3, 3]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +362,7 @@
        "       [0.73799541, 0.18249173, 0.17545176]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -375,7 +386,7 @@
        "(6, 3)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +428,7 @@
        "2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +448,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,31 +459,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "b = np.array([1,3,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.dtype"
    ]
   },
   {
@@ -483,7 +474,7 @@
     {
      "data": {
       "text/plain": [
-       "8"
+       "dtype('int64')"
       ]
      },
      "execution_count": 25,
@@ -492,16 +483,7 @@
     }
    ],
    "source": [
-    "b.itemsize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = np.array([1,3,4], dtype=\"int8\") # smaller integers"
+    "b.dtype"
    ]
   },
   {
@@ -512,10 +494,39 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "8"
       ]
      },
      "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b.itemsize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = np.array([1,3,4], dtype=\"int8\") # smaller integers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +558,7 @@
        "       [0.73799541, 0.18249173, 0.17545176]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +598,7 @@
        "0.6964691855978616"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +618,7 @@
        "0.2268514535642031"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +639,7 @@
        "       [0.55131477, 0.71946897, 0.42310646]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +659,7 @@
        "array([0.28613933, 0.22685145])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,13 +738,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ True, False, False],\n",
+       "array([[False, False, False],\n",
        "       [False,  True, False],\n",
        "       [ True, False, False],\n",
        "       [False, False,  True],\n",
@@ -741,7 +752,7 @@
        "       [ True, False, False]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,15 +764,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10.          0.71946897  0.9807642   0.72904971  0.73799541]\n",
-      "[10.          0.71946897  0.9807642   0.72904971  0.73799541]\n"
+      "[0.71946897 0.9807642  0.72904971 0.73799541]\n",
+      "[0.71946897 0.9807642  0.72904971 0.73799541]\n"
      ]
     }
    ],
@@ -779,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +799,7 @@
        "array([1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,21 +810,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2 3]\n",
-      " [4 5 6]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "grid = np.arange(1, 7).reshape((2, 3))\n",
-    "print(grid)"
+    "grid = np.arange(1, 10).reshape((3, 3))"
    ]
   },
   {
@@ -825,21 +826,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[10.        ,  0.28613933,  0.22685145],\n",
-       "       [ 0.55131477,  0.71946897,  0.42310646],\n",
-       "       [ 0.9807642 ,  0.68482974,  0.4809319 ],\n",
-       "       [ 0.39211752,  0.34317802,  0.72904971],\n",
-       "       [ 0.43857224,  0.0596779 ,  0.39804426],\n",
-       "       [ 0.73799541,  0.18249173,  0.17545176]])"
+       "array([[0.69646919, 0.28613933, 0.22685145],\n",
+       "       [0.55131477, 0.71946897, 0.42310646],\n",
+       "       [0.9807642 , 0.68482974, 0.4809319 ],\n",
+       "       [0.39211752, 0.34317802, 0.72904971],\n",
+       "       [0.43857224, 0.0596779 , 0.39804426],\n",
+       "       [0.73799541, 0.18249173, 0.17545176]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +861,7 @@
        "       [0.9807642 , 0.68482974]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1728,13 +1729,6 @@
    "source": [
     "second_half"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1753,7 +1747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
