--- a/Class_Materials/Prework-Review/Lab_Duel-Of-Sorcerers.ipynb
+++ b/Class_Materials/Prework-Review/Lab_Duel-Of-Sorcerers.ipynb
@@ -51,10 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf = [10, 11, 13, 30, 22, 11, 10, 33, 22, 22]\n",
+    "saruman = [23, 66, 12, 43, 12, 10, 44, 23, 12, 17]\n",
+    "spells = len(gandalf)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,10 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gandalf_wins = 0\n",
+    "saruman_wins = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,10 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for item in range(len(gandalf)):\n",
+    "    if gandalf[item] > saruman[item]:\n",
+    "        gandalf_wins += 1\n",
+    "    elif saruman[item] > gandalf[item]:\n",
+    "        saruman_wins += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +108,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins with 6 wins\n"
+     ]
+    }
+   ],
+   "source": [
+    "if gandalf_wins > saruman_wins:\n",
+    "    print(f\"Gandalf wins with {gandalf_wins} wins\")\n",
+    "elif saruman_wins<gandalf_wins:\n",
+    "    print(f\"Saruman wins with {saruman_wins} wins\")\n",
+    "else:\n",
+    "    print(\"It's a tie\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
