--- a/Class_Materials/Python_Basics/Labs/Tuple_Sets_Dicts/Tasks/(optional) Nested Dictionary.ipynb
+++ b/Class_Materials/Python_Basics/Labs/Tuple_Sets_Dicts/Tasks/(optional) Nested Dictionary.ipynb
@@ -39,12 +39,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "0c49f983",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'hundred': 30, 'twohundred': 30, 'threehundred': 30}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "keys = ['hundred', 'twohundred', 'threehundred']\n",
+    "values = [10, 20, 30]\n",
+    "numbers_dct = {}\n",
+    "\n",
+    "for key in keys:\n",
+    "    for value in values:\n",
+    "        numbers_dct[key] = value\n",
+    "\n",
+    "\n",
+    "numbers_dct"
    ]
   },
   {
@@ -68,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4f89673d",
    "metadata": {},
    "outputs": [
@@ -78,13 +99,17 @@
        "{'One': 1, 'Two': 2, 'Six': 6, 'Thirty': 30, 'Fourty': 40, 'Fifty': 50}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "dict1 = {'One': 1, 'Two': 2, 'Six': 6}\n",
+    "dict2 = {'Thirty': 30, 'Fourty': 40, 'Fifty': 50}\n",
+    "dict3 = dict1 | dict2\n",
+    "dict3"
    ]
   },
   {
@@ -105,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 35,
    "id": "0609be7f",
    "metadata": {},
    "outputs": [],
@@ -141,12 +166,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "id": "55fcee28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20, 10, 35, 45]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "martins_french = sampleDict[\"class\"][\"student_list\"][\"Martin\"][\"marks\"][\"french\"]\n",
+    "martins_french"
    ]
   },
   {
@@ -159,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 37,
    "id": "b55e1ee4",
    "metadata": {},
    "outputs": [
@@ -169,13 +208,16 @@
        "61.25"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import numpy as np\n",
+    "richard_bio_mean = np.mean(sampleDict[\"class\"][\"student_list\"][\"Richard\"][\"marks\"][\"biology\"])\n",
+    "richard_bio_mean"
    ]
   },
   {
@@ -188,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 39,
    "id": "102c92e3",
    "metadata": {},
    "outputs": [
@@ -198,13 +240,17 @@
        "['Anna', 'Martin', 'Richard']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "students = []\n",
+    "for key, value in sampleDict[\"class\"][\"student_list\"].items():\n",
+    "    students.append(key)\n",
+    "students"
    ]
   },
   {
@@ -217,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 41,
    "id": "72da977b",
    "metadata": {},
    "outputs": [
@@ -227,12 +273,15 @@
        "10"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "anna_history_second_grade = sampleDict[\"class\"][\"student_list\"][\"Anna\"][\"marks\"][\"history\"][1]\n",
+    "anna_history_second_grade"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 55,
    "id": "956d1f3e",
    "metadata": {},
    "outputs": [
@@ -267,7 +316,10 @@
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "for key, value in sampleDict[\"class\"][\"student_list\"].items():\n",
+    "    for subject in sampleDict[\"class\"][\"student_list\"][key][\"marks\"]:\n",
+    "        print(sampleDict[\"class\"][\"student_list\"][key][\"marks\"][subject][2])"
    ]
   },
   {
@@ -523,7 +575,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -537,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
